1.20.08 (9-29-2008)
Removed speed control slider

8-30-2007: Slider wiggle me is hidden when user enters text in a text box.
7-26-2007: Workaround for font bounds problem in some locales that caused tearing in the time readout

1.16.09 (6-27-2007)
Improved motion subproject for MovingManMotionApplication feasibility test

1.16.08 (6-13-2007)
Testing beanshell evaluator under web start.

1.16.07 (6-11-2007)
Added Play/Pause to Expression evaluator.
Fixed a bug in audio resource loading.

1.16.06 (6-11-2007)
Improved Slovak localization file.